# blackpod-battlestar-build-week

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  BUILD_WEEK_CHANGELOG.md  CAPTAINS_CABIN.md  DEMO_RUNBOOK.md  LIVE_DEMO_RUNBOOK.md  SAFETY_BOUNDARY.md
examples/: mission_request.live.json  mission_request.replay-hold.json  mission_request.replay-stand-down.json  mission_request.replay.json
fixtures/: council_replay_policy.v1.json  demo_scenarios.v1.json  governor_replay_context.hold.v1.json  governor_replay_context.proceed.v1.json  governor_replay_context.stand_down.v1.json  modeldock_oracle_narrative.replay.v1.json  navigator_replay.intake-failure.v1.json  navigator_replay.shadow.v1.json  operator_replay_action.approve.v1.json  operator_replay_action.reject.v1.json  oracle_replay_quotes.risk_off.v1.json  oracle_replay_quotes.v1.json
scripts/: capture_cabin_context.py  package_live_demo.py  prepare_cabin_demo.py
tests/: test_battlestar_config.py  test_cabin_context.py  test_cli_help.py  test_contracts.py  test_council_adapter.py  test_council_cli.py  test_council_workflow.py  test_demo_catalog.py  test_demo_cli.py  test_demo_contracts.py  test_demo_terminal.py  test_demo_validation.py  test_demo_workflow.py  test_governor_adapter.py  test_governor_cli.py  test_governor_workflow.py  test_harbormaster.py  test_live_demo_packager.py  test_mission_presentation.py  test_mission_store.py  test_mission_transitions.py  test_modeldock_cli.py  test_modeldock_client.py  test_modeldock_config.py  test_modeldock_preflight.py  (+15 more)
(+97 files in other folders)
